Update all HTML

--- a/templates/disclaimer.html
+++ b/templates/disclaimer.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>平台免責聲明｜OMTW Map</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="icon" href="{{ url_for('static', filename='img/omtw.ico') }}" type="image/x-icon">
     <style>
       /* 🚀 頂部註冊按鈕樣式 */
       .top-register-btn {
