--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>會員登入｜台灣定向行動師資平台</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="icon" href="{{ url_for('static', filename='img/omtw.ico') }}" type="image/x-icon">
 <style>
   /* 🚀 頂部註冊按鈕樣式 */
   .top-register-btn {
