--- a/templates/view_profile.html
+++ b/templates/view_profile.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>定向行動老師聯絡資訊</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="icon" href="{{ url_for('static', filename='img/omtw.ico') }}" type="image/x-icon">
   <style>
     .modal {
       display: block; /* 若嵌入 map.html 可設為 none，再由 JS 控制開關 */
