--- a/templates/admin_panel.html
+++ b/templates/admin_panel.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>管理後台</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="icon" href="{{ url_for('static', filename='img/omtw.ico') }}" type="image/x-icon">
 
 </head>
 <body>
