--- a/templates/admin_reset_code.html
+++ b/templates/admin_reset_code.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>設定一次性驗證碼｜管理後台</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="icon" href="{{ url_for('static', filename='img/omtw.ico') }}" type="image/x-icon">
   <style>
     .form-container {
       max-width: 400px;
