--- a/templates/delete_confirm.html
+++ b/templates/delete_confirm.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>刪除資料確認</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="icon" href="{{ url_for('static', filename='img/omtw.ico') }}" type="image/x-icon">
 </head>
 <h2>你確定要刪除此筆資料嗎？</h2>
 <p>服務地區：{{ profile.service_area }}</p>
