--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>填寫圖標顯示資料</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-
+  <link rel="icon" href="{{ url_for('static', filename='img/omtw.ico') }}" type="image/x-icon">
   <!-- Leaflet 地圖 CSS -->
   <link
     rel="stylesheet"
