--- a/templates/map.html
+++ b/templates/map.html
@@ -172,7 +172,7 @@
 
   <script>
     function showHelp() {
-      alert("🧭 使用說明：\n\n📍 地圖上每個圖標代表一位定向行動老師。\n👤 登入後可新增或更新自己的圖標資訊。\n📝 若不想公開真實姓名，可選擇用暱稱顯示。\n\n➡ 點選圖標可查看老師資料。（內容依老師方便公開程度）");
+      alert("🧭 使用說明：\n\n📍 地圖上每個圖標代表一位定向行動老師。\n👤 登入後可新增或更新自己的圖標資訊。\n📝 若不想公開真實姓名，可選擇用暱稱顯示。\n 無障礙查找頁面方便視障朋友以文字查找。\n\n➡ 點選圖標可查看老師資料。（內容依老師方便公開程度）");
     }
 
     document.addEventListener("DOMContentLoaded", function () {
