--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,7 @@
   <br>
   <div>
     <a class="btn" href="{{ url_for('map_page') }}">進入定向行動師資地圖</a>
+    <a class="btn" href="{{ url_for('accessible_search') }}">無障礙查找頁面</a>
     <a class="btn" href="{{ url_for('register') }}">註冊帳號</a>
   </div>
    <br>
