--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>台灣定向行動師資平台</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <link rel="icon" href="{{ url_for('static', filename='img/omtw.ico') }}" type="image/x-icon">
@@ -46,7 +47,7 @@
   </p>
   <br>
   <div>
-    <a class="btn" href="{{ url_for('map_page') }}">進入定向行動師資地圖</a>
+    <a class="btn" href="{{ url_for('map_page') }}">進入師資地圖</a>
     <a class="btn" href="{{ url_for('accessible_search') }}">無障礙查找頁面</a>
     <a class="btn" href="{{ url_for('register') }}">註冊帳號</a>
   </div>
