--- a/templates/profile.html
+++ b/templates/profile.html
@@ -127,8 +127,8 @@
       本人確認所填資料皆屬實，若有不實或偽造，將自行負法律責任，並與本平台無關。
     </label><br><br>
 
-    <button type="submit">送出申請</button><br><br>
-    <button type="button" onclick="window.history.back()">取消申請</button>
+    <button type="submit">放置圖標</button><br><br>
+    <button type="button" onclick="window.history.back()">取消放置</button>
 
   </form>
 
