--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>老師註冊申請</title>
+    <title>註冊申請</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='img/omtw.ico') }}" type="image/x-icon">
 <style>
