--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -39,6 +39,7 @@
   <div class="form-container">
   <h2>重設密碼</h2>
   <form method="POST">
+      <p>請您留意 Email 信箱，系統會發送驗證碼給您重設密碼。</p>
     <label>Email：</label>
     <input type="email" name="email" required><br>
     <label>驗證碼：</label>
