--- a/templates/map.html
+++ b/templates/map.html
@@ -165,6 +165,11 @@
 
   <div id="map"></div>
 
+    <!-- 🔐 將登入狀態傳入 JS -->
+  <script>
+    const isLoggedIn = {{ 'true' if current_user.is_authenticated else 'false' }};
+  </script>
+
   <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://unpkg.com/esri-leaflet/dist/esri-leaflet.js"></script>
@@ -229,16 +234,21 @@
             });
 
             const marker = L.marker([t.lat, t.lng], { icon: customIcon }).addTo(map);
-            marker.bindPopup(`
-            <div style="max-width:250px;word-break:break-word;">
-              <b>${t.name}</b><br>
-              教學地區：${t.service_area}<br>
-              結訓年份：${t.certification_year}<br>
-              結訓證號：${t.certification_number}<br>
-              國家證號：${t.license_number || '（未提供）'}<br>
-              <a href="/profile/view/${t.id}" target="_blank">🔍 詳細內容</a>
-            </div>
-            `);
+            const popupContent = `
+              <div style="max-width:250px;word-break:break-word;">
+                <b>${t.name}</b><br>
+                教學地區：${t.service_area}<br>
+                結訓年份：${t.certification_year}<br>
+                結訓證號：${t.certification_number}<br>
+                國家證號：${t.license_number || '（未提供）'}<br>
+                ${
+                  isLoggedIn === true
+                    ? `<a href="/profile/view/${t.id}" target="_blank">🔍 詳細內容</a>`
+                    : `<span style="color:#888;">🔒 請先登入以查看詳細資料</span>`
+                }
+              </div>
+            `;
+            marker.bindPopup(popupContent);
           });
 
           const legend = L.control({ position: 'bottomright' });
