--- a/templates/register.html
+++ b/templates/register.html
@@ -84,6 +84,14 @@
         <input type="password" name="password" required>
       </label><br><br>
 
+      <label>
+        <input type="checkbox" name="agree" required>
+        我已閱讀並同意
+        <a href="{{ url_for('disclaimer') }}" target="_blank" style="color: #007bff; text-decoration: underline;">
+          平台權責聲明
+        </a>
+      </label><br><br>
+
       <button type="submit">送出註冊</button>
     </form>
 
