--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -38,8 +38,19 @@
 <body>
   <div class="form-container">
   <h2>重設密碼</h2>
+
+      {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      <ul style="color: red; text-align: left;">
+        {% for message in messages %}
+          <li>{{ message }}</li>
+        {% endfor %}
+      </ul>
+    {% endif %}
+  {% endwith %}
+
   <form method="POST">
-      <p>請您留意 Email 信箱，系統會發送驗證碼給您重設密碼。</p>
+      <p>請您留意 Email 信箱，輸入系統寄送的驗證碼以重設密碼。</p>
     <label>Email：</label>
     <input type="email" name="email" required><br>
     <label>驗證碼：</label>
