--- a/templates/index.html
+++ b/templates/index.html
@@ -72,8 +72,10 @@
       .btn {
         width: 100%;
         max-width: 90%;
+        padding: 0.6rem 1rem;
+        font-size: 1rem;
       }
-
+    }
   </style>
 </head>
 <body>
